--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; flex-wrap: wrap;">
     <h1>Yay! you have completed the first exercise</h1>
     <img src="{{url_for('static', filename='yay.gif')}}" alt="yay" style="height: 25em; width: 35em;">
-    <p style="font-size: 2em;">now save the changes you made to the container, <b>without</b> running the Dockerfile again!</p>
+    <p style="font-size: 2em;">Now save the container’s changes into a new image, <b>without</b> running the Dockerfile again!</p>
 
 </div>
 
